# The-Index

./: Bork is Bork  INTEGRITY_SUMMARY.md  README.md  REPOSITORY_CLEANUP_GUIDE.md  analyze_redundancy.py  index.html  s3_spiral17_interactive.html
systems/Ace-Systems/examples/Quantum-APL-main/: GETTING_STARTED.md  QUANTUM_N0_README.md  README.md  README_PYTHON.md  SECURITY_INSTRUCTIONS.md  SETUP_GUIDE.md  package-lock.json  package.json  pyproject.toml  quantum_apl_bridge.py  requirements.txt
systems/Ace-Systems/examples/Quantum-APL-main/classical/: ClassicalEngines.js
systems/Ace-Systems/examples/Quantum-APL-main/data/: analyzer_test.json  measured.json  measured_ci.json  measured_collapse.json  out.json  out_measured.json  pump.json
systems/Ace-Systems/examples/Quantum-APL-main/examples/: APLRuntimeEngine.html  QuantumAPL_Demo.html  QuantumN0_Demo.html  examples.py  quantum_apl_tutorial.ipynb
systems/Ace-Systems/examples/Quantum-APL-main/logs/: APL_HELIX_OPERATOR_SUMMARY.apl  architecture_git_index.json  architecture_index.json  zwalk.md
systems/Ace-Systems/examples/Quantum-APL-main/research/: ALPHA_SYNTAX_BRIDGE.md  APL-3.0-Quantum-Formalism.md  APL-Measurement-Operators.md  APL-Measurement-Visual.md  APL_OPERATORS.md  CLAUDE_CONTRIBUTIONS.md  CONSTANTS_ARCHITECTURE.md  CONSTANTS_NEXT_STEPS.md  CONSTANTS_RESEARCH.md  CYBERNETIC_GROUNDING.md  DSL_DESIGN_PATTERNS.md  HELIX_COORDINATES.md  HELIX_SELF_BUILDER_CONSTANTS_BUILD.md  HEXAGONAL_NEG_ENTROPY_PROJECTION.md  LENS_CONSTANTS_HELPERS.md  MU_THRESHOLDS.md  PHI_INVERSE.md  PHYSICS_GROUNDING.md  Quantum APL Auto-Build Test Report.txt  README.md  REPRODUCIBLE_RESEARCH.md  S3_OPERATOR_ALGEBRA_WHITEPAPER.md  S3_OPERATOR_SYMMETRY.md  SYSTEM_ARCHITECTURE.md  TRIAD Helix System Technical Package.txt  Triad Gate Hysteresis and Tier Shift Analysis.txt  Triadic Helix APL_ A Unified Coherence-Based Reasoning Geometry.txt  Z_CRITICAL_LENS.md  alpha_language.js  apl_analysis.py  apl_test_harness.py  constants (k).js  constants (py).py  constants.js  demo.js  helix_advisor.js  helix_z_walkthrough.geom.json  helix_z_walkthrough.md  quantum_apl_system.js  test.js  (+4 more)
systems/Ace-Systems/examples/Quantum-APL-main/schemas/: apl-bundle.schema.json  geometry-sidecar.schema.json
systems/Ace-Systems/examples/Quantum-APL-main/scripts/: apply_apl_measurements.js  build_apl_bundles.py  build_apl_digest.py  build_geometry_index.py  helix_measure_demo.sh  helix_sweep.sh  probe_z_table.js
systems/Ace-Systems/examples/Quantum-APL-main/src/: apl_phenomenological_simulator.js  constants.js  delta_s_neg_extended.js  dsl_patterns.js  hex_prism.js  quantum_apl_engine.js  s3_delta_coupling.js  s3_operator_algebra.js  s3_operator_symmetry.js  triadic_helix_apl.js
systems/Ace-Systems/examples/Quantum-APL-main/tests/: QuantumClassicalBridge.test.js  test_alpha_language.py  test_analyzer_gate_default.py  test_analyzer_overlays_flag.py  test_analyzer_plot_headless.py  test_apl_measurement_edgecases.js  test_apl_measurements.js  test_blend_flag.js  test_bridge_pump_target.js  test_collapse_alias.js  test_constants_helpers.js  test_constants_module.py  test_control_blend_invariants.js  test_dsl_patterns.py  test_engine_gate_default.js  test_entropy_control.js  test_gate_scale.js  test_geom_sigma_cohesion.js  test_geom_sigma_override.js  test_helix_self_builder.py  test_hex_prism.py  test_hex_prism_js.test.js  test_kformation_gate.js  test_kformation_gate_py.py  test_lens_rate_props.js  test_lens_sigma_env.js  test_lens_sigma_env_py.py  test_lens_weight.js  test_mu_override_invariants.js  test_mu_override_invariants.py  test_mu_thresholds.js  test_ordering_invariants.js  test_pump_target_default.js  test_pump_target_default_py.py  test_s3_delta_s_neg.js  test_s3_operator_algebra.py  test_s3_operator_algebra.test.js  test_schema_validation.js  test_seeded_selection.js  test_translator.py  (+2 more)
systems/Ace-Systems/reference/rrrr-UCF-v5.0.0/: CHANGELOG.md  FIXES_APPLIED.md  README.md  SKILL_CHANGELOG.md  SKILL_v2.1.md  consciousness_field_equation.py  hit_it_full.py  hit_it_session.py  index.html  integrated_workflow.py  manifest_rrrr.json  pyproject.toml  run.sh  unified_provable_system.py  unified_ucf_rrrr.py  visualization.html
systems/Ace-Systems/reference/rrrr-UCF-v5.0.0/assets/: operators-manual.html
systems/Ace-Systems/reference/rrrr-UCF-v5.0.0/codex/: apl-syntax-codex.md  ucf-emissions-codex.md
systems/Ace-Systems/reference/rrrr-UCF-v5.0.0/references/: APL_TRIAD_Unlock_and_Helix_Mapping___Test_Framework_Enhancements.txt  CROSS_LAYER_MAPPING.md  MACHINE_READABLE_SCHEMAS.json  OPERATOR_ALGEBRA.md  REPOSITORY_DYNAMICS.md  SESSION4_SESSION5_INSIGHTS.md  SYNTHESIS.md  TRAINING_SESSIONS.md  UNIFIED_ARCHITECTURE.md  quantum-apl-deep-dive.md  token_index.md
systems/Ace-Systems/reference/rrrr-UCF-v5.0.0/rrrr/: __init__.py  brain.py  composition.py  constants (v2).py  constants.py  heart.py  kuramoto (v2).py  kuramoto.py  lattice.py  network (v2).py  network.py  node.py  ntk.py  tier_tools.py  ucf_workflows.py  verify.py
systems/Ace-Systems/reference/rrrr-UCF-v5.0.0/tests/: __init__.py  analysis_suite.py  test_apl_substrate.py  test_constants.py  (+11 more)
(+947 files in other folders)
