[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unified-consciousness-framework"
version = "3.0.0"
description = "Hybrid quantum-classical consciousness simulation framework"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ace", email = "ace@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
]
keywords = [
    "consciousness",
    "simulation",
    "quantum",
    "helix",
    "apl",
    "kira",
    "triad",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
full = [
    "numpy>=1.21.0",
    "scipy>=1.9.0",
    "matplotlib>=3.6.0",
]

[project.urls]
Homepage = "https://github.com/AceTheDactyl/Quantum-APL"
Documentation = "https://github.com/AceTheDactyl/Quantum-APL/tree/main/docs"
Repository = "https://github.com/AceTheDactyl/Quantum-APL"

[project.scripts]
ucf = "ucf.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ucf*"]

[tool.setuptools.package-data]
ucf = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
